tests-integration/fixtures/checking/159_derive_foldable_higher_kinded/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
Wrap ::
  forall (t4 :: Type) (f :: (t4 :: Type) -> Type) (a :: (t4 :: Type)).
    (f :: (t4 :: Type) -> Type) (a :: (t4 :: Type)) ->
    Wrap @(t4 :: Type) (f :: (t4 :: Type) -> Type) (a :: (t4 :: Type))
WrapNoFoldable ::
  forall (t10 :: Type) (f :: (t10 :: Type) -> Type) (a :: (t10 :: Type)).
    (f :: (t10 :: Type) -> Type) (a :: (t10 :: Type)) ->
    WrapNoFoldable @(t10 :: Type) (f :: (t10 :: Type) -> Type) (a :: (t10 :: Type))

Types
Wrap :: forall (t4 :: Type). ((t4 :: Type) -> Type) -> (t4 :: Type) -> Type
WrapNoFoldable :: forall (t10 :: Type). ((t10 :: Type) -> Type) -> (t10 :: Type) -> Type

Data
Wrap
  Quantified = :1
  Kind = :0

WrapNoFoldable
  Quantified = :1
  Kind = :0


Roles
Wrap = [Representational, Nominal]
WrapNoFoldable = [Representational, Nominal]

Derived
derive Foldable (&0 :: Type -> Type) => Foldable (Wrap @Type (&0 :: Type -> Type) :: Type -> Type)
derive Foldable (WrapNoFoldable @Type (&0 :: Type -> Type) :: Type -> Type)

Diagnostics
error[NoInstanceFound]: No instance found for: Foldable (&0 :: Type -> Type)
  --> 9:1..9:44
  |
9 | derive instance Foldable (WrapNoFoldable f)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
